--- a/static.hzshuangmei.com/css/m/hzyswx/css.css
+++ b/static.hzshuangmei.com/css/m/hzyswx/css.css
@@ -113,7 +113,7 @@ a { color: #fff; border: none; text-decoration: none; }
 .main8-r { width: 7.725rem; float: right; }
 
 /*main9*/
-.main9 { width: 15.25rem; height: 15.25rem; margin: 0 auto; padding-top: 0.65rem; }
+.main9 { width: 15.25rem; margin: 0 auto; padding-top: 0.65rem; }
 .tt08 { width: 11.25rem; margin: 0 auto; }
 .main9 ul { width: 100%; height: 12.8rem; padding-top: 1.125rem; }
 .main9 ul li { height: 100%; }
