项目页banner尺寸添加2
项目页banner尺寸添加2

--- a/static.hzshuangmei.com/css/pc/list_project.css
+++ b/static.hzshuangmei.com/css/pc/list_project.css
@@ -49,6 +49,10 @@
     margin-bottom: 11px;
     width:291px;
     height:110px;
+    overflow: hidden;
+}
+.project_banner #ptab li img {
+    width: 100%;
 }
 #ptabCon {
     clear: both;
