项目列表页鼠标事件
项目列表页鼠标事件

--- a/static.hzshuangmei.com/css/pc/list_project.css
+++ b/static.hzshuangmei.com/css/pc/list_project.css
@@ -50,6 +50,7 @@
     width:291px;
     height:110px;
     overflow: hidden;
+    cursor: pointer;
 }
 .project_banner #ptab li img {
     width: 100%;
