--- a/static.hzshuangmei.com/css/pc/article_case.css
+++ b/static.hzshuangmei.com/css/pc/article_case.css
@@ -195,7 +195,15 @@ h3{
     width: 31%;
     border: 1px solid #ebebeb;
 }
-
+.article_case_content .main_content .note p {
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: justify;
+    color: #a287a9;
+    background: #f3f1f6;
+}
 
 /********************* case_article  modal*********************/
 .article_case_content .main img{cursor:zoom-in;}
