赫本样式调整1
赫本样式调整1

--- a/static.hzshuangmei.com/css/pc/heben/css.css
+++ b/static.hzshuangmei.com/css/pc/heben/css.css
@@ -545,9 +545,9 @@ img {
 .part6 .contain .main .wrap .slider .yuzhiliang {
   padding-bottom: 84px;
   background: url("//img.hzshuangmei.com/pc/heben/img_yuanzhliang.jpg") right top no-repeat; }
-.part6 .contain .main .wrap .slider .linyin {
+.part6 .contain .main .wrap .slider .zhuzhenhong {
   padding-bottom: 74px;
-  background: url("//img.hzshuangmei.com/pc/heben/img_linyin.jpg") right top no-repeat; }
+  background: url("//img.hzshuangmei.com/pc/heben/img_zhuzhenhong.jpg") right top no-repeat; }
 .part6 .contain .main .wrap .slider .guanhaitao {
   padding-bottom: 86px;
   background: url("//img.hzshuangmei.com/pc/heben/img_guanhaixoa.jpg") right top no-repeat; }
