项目列表修改6
项目列表修改6

--- a/static.hzshuangmei.com/css/pc/list_project.css
+++ b/static.hzshuangmei.com/css/pc/list_project.css
@@ -162,7 +162,7 @@
     /*color: #7e4d9f;*/
 /*}*/
 #ptabCon2 li {
-    display: none;
+    /*display: none;*/
     margin-top: 5px;
 }
 #ptabCon2 .pdiv2 {
@@ -240,6 +240,20 @@
     margin-left: 9px;
 
     background-color: #6e3693;
+}
+.pagination{
+    width: 600px;
+    margin: 0 auto 50px
+}
+.pagination>li{
+    float:left;
+    margin: 5px;
+    border: 1px solid #e6e6e6;
+    padding: 8px 14px;
+}
+.pagination .thisclass {
+    background-color: #8a59a7;
+    color: #fff;
 }
 /*.m1 .ask{*/
 /*display:block;*/
