--- a/static.hzshuangmei.com/css/pc/list_doctors.css
+++ b/static.hzshuangmei.com/css/pc/list_doctors.css
@@ -96,12 +96,12 @@
     color:#fff;
     background:url(//img.hzshuangmei.com/pc/doctors_bg.jpg)no-repeat center;
 }
-#doctors_tabCon ul {
-    display:none;
-}
-#doctors_tabCon .doc_fdiv {
-    display:block;
-}
+/*#doctors_tabCon ul {*/
+    /*display:none;*/
+/*}*/
+/*#doctors_tabCon .doc_fdiv {*/
+    /*display:block;*/
+/*}*/
 #doctors_tabCon ul li{
     border:1px solid #e8e8e8;
     width: 290px;
