--- a/static.hzshuangmei.com/css/pc/list_case.css
+++ b/static.hzshuangmei.com/css/pc/list_case.css
@@ -63,13 +63,13 @@
     color: #fff!important;
 }
 
-#case_tabCon li {
+/*#case_tabCon li {*/
     /*display: none;*/
-}
+/*}*/
 
-#case_tabCon .case_fdiv {
-    display: block;
-}
+/*#case_tabCon .case_fdiv {*/
+    /*display: block;*/
+/*}*/
 
 
 #case_tabCon .list {
