--- a/static.hzshuangmei.com/css/pc/list_project.css
+++ b/static.hzshuangmei.com/css/pc/list_project.css
@@ -162,7 +162,7 @@
 /*#ptab2 .gengduo:hover {*/
     /*color: #7e4d9f;*/
 /*}*/
-#ptabCon2 li {
+#ptabCon2>div {
     /*display: none;*/
     margin-top: 5px;
 }
