--- a/static.hzshuangmei.com/css/pc/list_doctors.css
+++ b/static.hzshuangmei.com/css/pc/list_doctors.css
@@ -92,7 +92,7 @@
     cursor: pointer;
 }
 
-.doctors_content #doctors_tab ul .doc_fli{
+.doctors_content #doctors_tab ul .currnet3{
     color:#fff;
     background:url(//img.hzshuangmei.com/pc/doctors_bg.jpg)no-repeat center;
 }
