--- a/static.hzshuangmei.com/css/pc/list_doctors.css
+++ b/static.hzshuangmei.com/css/pc/list_doctors.css
@@ -93,7 +93,7 @@
 }
 
 .doctors_content #doctors_tab ul .currnet3{
-    color:#fff;
+    background:url(//img.hzshuangmei.com/pc/doctors_bg.jpg)no-repeat center;
 }
 .doctors_content #doctors_tab ul .currnet3 a{
     color:#fff;
