--- a/static.hzshuangmei.com/css/pc/hzyj/css/css.css
+++ b/static.hzshuangmei.com/css/pc/hzyj/css/css.css
@@ -66,7 +66,7 @@ button, input, select, textarea {
 }
 
 .xiangbn {
-    display: none;
+    display:block;
     width: 100%;
     height: 600px;
     background: url(//img.hzshuangmei.com/pc/hzyj/images/xiangx.jpg) top center no-repeat
