--- a/static.hzshuangmei.com/css/m/hzyj/aa.css
+++ b/static.hzshuangmei.com/css/m/hzyj/aa.css
@@ -40,7 +40,6 @@ a {
 }
 .banner {
   width: 100%;
-  margin-top: 8%;
 }
 .banner-b {
   width: 100%;
@@ -90,6 +89,7 @@ a {
 .title9 strong {
   font-size: 0.9rem;
   color: #2577b9;
+  vertical-align: text-bottom;
 }
 .title {
   position: relative;
