--- a/static.hzshuangmei.com/css/m/hzyj/aa.css
+++ b/static.hzshuangmei.com/css/m/hzyj/aa.css
@@ -96,7 +96,7 @@ a {
   width: 9.8rem;
   height: 1.5rem;
   margin: 0 auto;
-  line-height: 0.25rem;
+  /*line-height: 0.25rem;*/
 }
 .title em,
 .title9-bg em {
