--- a/static.hzshuangmei.com/css/pc/index.css
+++ b/static.hzshuangmei.com/css/pc/index.css
@@ -913,7 +913,7 @@ h3 img {
     position: relative;
     height:1008px;
     /*padding-top: 40px;*/
-    background: url('./images/slbg.jpg') no-repeat 50%;
+    background: url('//img.hzshuangmei.com/pc/fzlc/slbg.jpg') no-repeat 50%;
 }
 
 .lc_con_t {
