皮秒样式更正
皮秒样式更正

--- a/static.hzshuangmei.com/css/m/pimiao/css.css
+++ b/static.hzshuangmei.com/css/m/pimiao/css.css
@@ -147,7 +147,7 @@ a { color: #fff; border: none; text-decoration: none}
 .adv4{width: 100%; height:10rem; margin-top: 0.5rem}
 .adv4-in{width: 100%; height:5.26rem; margin-top: 0.3rem;}
 .adv-top{width: 100%; height: 1.5rem;}
-.imgbox{
+.imgbox1{
     width:10.575rem; height: 3.075rem;
     background-color:  #e6e6e6;
     border: 0.15rem solid #e6e6e6;
