--- a/static.hzshuangmei.com/css/m/site.css
+++ b/static.hzshuangmei.com/css/m/site.css
@@ -154,7 +154,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid #ee
 #diary .label { height: .8rem; padding: .4rem 0 .5rem; line-height: .8rem; }
 #diary .label br { display: none; }
 #diary .pro { padding-left: 1.05rem; font-size: .4rem; line-height: .8rem; color: #99c; background: url("https://img.hzshuangmei.com/m/icon_flag.png") left center no-repeat; background-size: auto 100%; }
-#diary .pro a { color: #99c; }
+#diary .pro a { color: #99c; display: inline-block;}
 #diary .right { float: right; line-height: .8rem; }
 #diary .show { width: .875rem; height: .425rem; background: url("https://img.hzshuangmei.com/m/icon_show2.png") center center no-repeat; background-size: auto 100%; }
 #diary .click { padding-left: .75rem; margin-left: .45rem; font-size: .45rem; color: #b292d2; background: url("https://img.hzshuangmei.com/m/icon_eye.png") left center no-repeat; background-size: auto 1em; }
